fixed cards on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -144,7 +144,7 @@ STYLE CLASSEUR */
 		height: 8rem;
 		width: 8rem;
 	}
-
-	
-
+	.cardBackMobile {
+		display: flex;
+	}
 }
